services/ni/plausible/05-deployment-plausible.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible
  namespace: plausible-ni
spec:
  selector:
    matchLabels:
      app: plausible
  template:
    metadata:
      labels:
        app: plausible
    spec:
      containers:
      - name: plausible
        image: ghcr.io/plausible/community-edition:v2.1.0
        command:
          - sh
          - -c
          - "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh run"
        resources:
          limits:
            memory: "512Mi"
            cpu: "256m"
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: plausible
  namespace: plausible-ni
spec:
  selector:
    app: plausible
  ports:
  - port: 80
    targetPort: 8000
